--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fp-ts",
-  "version": "2.7.0",
+  "version": "3.0.0-alpha",
   "description": "Functional programming in TypeScript",
   "files": [
     "lib",
