--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "3.0.0-alpha",
   "description": "Functional programming in TypeScript",
   "files": [
-    "lib",
-    "es6"
+    "dist"
   ],
-  "main": "lib/index.js",
-  "module": "es6/index.js",
-  "typings": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "sideEffects": false,
   "scripts": {
     "lint": "tslint -p .",
@@ -17,10 +16,10 @@
     "prettier": "prettier --list-different \"./{src,test,examples}/**/*.ts\"",
     "fix-prettier": "prettier --write \"./{src,test,examples}/**/*.ts\"",
     "test": "npm run lint && npm run prettier && npm run dtslint && npm run jest-clear-cache && npm run jest && npm run docs",
-    "clean": "rimraf lib/* es6/*",
+    "clean": "rimraf dist/*",
     "prebuild": "npm run clean",
-    "build": "tsc -p ./tsconfig.build.json && tsc -p ./tsconfig.build-es6.json",
-    "postbuild": "prettier --write \"./{lib,es6}/**/*.ts\"",
+    "build": "tsc -p ./tsconfig.build.json",
+    "postbuild": "prettier --write \"./dist/**/*.ts\"",
     "prepublish": "npm run build",
     "doctoc": "doctoc README.md docs/introduction/code-conventions.md --title \"**Table of contents**\"",
     "mocha": "mocha -r ts-node/register test/*.ts",
