--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "noEmit": true,
-    "outDir": "./lib",
-    "target": "es5",
-    "module": "commonjs",
+    "outDir": "./dist",
+    "target": "es6",
+    "module": "es6",
     "moduleResolution": "node",
     "lib": ["es6", "dom"],
     "sourceMap": false,
