--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "noEmit": true,
-    "outDir": "./dist",
+    "outDir": "./es6",
     "target": "es6",
     "module": "CommonJS",
     "moduleResolution": "node",
